Fix discord logo alignment

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -168,6 +168,6 @@ h5 {
     width: 28px;
     height: 28px;
     position: relative;
-    /*right: 1px;*/
+    right: 3px;
     bottom: 4px;
 }
